--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 878c129
+	base = 3b3e016
 	trimbase = 
 	parent = release/kinetic/asr_msgs
-	previous = 
+	previous = 878c129
