--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f34903
+	base = bf41af1
 	trimbase = 
 	parent = debian/kinetic/asr_msgs
-	previous = 
+	previous = 6f34903
