--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ad7cf5
+	base = 94d0ae3
 	trimbase = 
 	parent = debian/melodic/asr_msgs
-	previous = 
+	previous = 2ad7cf5
