--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 11927a9
+	base = c275995
 	trimbase = 
 	parent = debian/melodic/asr_msgs
-	previous = 
+	previous = 11927a9
