--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4084378
+	base = 9077f4c
 	trimbase = 
 	parent = release/melodic/asr_msgs
-	previous = 
+	previous = 4084378
