--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7c12e8
+	base = da392f6
 	trimbase = 
 	parent = rpm/melodic/asr_msgs
-	previous = 
+	previous = a7c12e8
